--- a/BITELICIOUS/BITELICIOUS/html/index.html
+++ b/BITELICIOUS/BITELICIOUS/html/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>🌀 BITELICIOUS | Veg Recipes & Desserts 🍰</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> <!-- Adding Google Fonts -->
 </head>
 <body>
 
@@ -16,6 +17,8 @@
       <li><a href="#">🥦 Veg Dishes</a></li>
       <li><a href="#">🍩 Desserts</a></li>
       <li><a href="#">📖 About</a></li>
+      <li><a href="#">📞 Contact</a></li>
+      <li><a href="#">💬 Reviews</a></li>
     </ul>
   </nav>
 
@@ -48,6 +51,31 @@
         <h3>🍝 Cheesy Veg Pasta</h3>
         <p>Italian vibes with desi twist 😋</p>
       </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?dal,indian" alt="Dal Tadka" />
+        <h3>🍛 Dal Tadka</h3>
+        <p>Comforting and nutritious yellow dal 🌿</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?samosa,veg" alt="Veg Samosa" />
+        <h3>🥟 Veg Samosa</h3>
+        <p>Crunchy, spicy & perfect for snacks 😋</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?masala,paratha" alt="Aloo Paratha" />
+        <h3>🥔 Aloo Paratha</h3>
+        <p>Soft and stuffed with spicy mashed potatoes 🥔</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?chole,bhature" alt="Chole Bhature" />
+        <h3>🍛 Chole Bhature</h3>
+        <p>Spicy chickpeas served with fried bread 🍞</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?salad" alt="Greek Salad" />
+        <h3>🥗 Greek Salad</h3>
+        <p>Fresh veggies with feta and olives 🥒🍅</p>
+      </div>
     </div>
   </section>
 
@@ -69,6 +97,31 @@
         <img src="https://source.unsplash.com/250x150/?icecream" alt="Ice Cream" />
         <h3>🍓 Ice Cream Sundae</h3>
         <p>Chill out with this fruity swirl ❄️🍒</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?cupcake" alt="Cupcake" />
+        <h3>🧁 Vanilla Cupcakes</h3>
+        <p>Fluffy, soft & topped with icing 🧁</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?carrot-cake" alt="Carrot Cake" />
+        <h3>🥕 Carrot Cake</h3>
+        <p>Sweet, moist & full of goodness 🥕</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?pudding" alt="Chocolate Pudding" />
+        <h3>🍮 Chocolate Pudding</h3>
+        <p>Velvety smooth and indulgent 🍫</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?jalebi" alt="Jalebi" />
+        <h3>🍯 Jalebi</h3>
+        <p>Sweet, crispy, and dipped in syrup 🍯</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?cheesecake" alt="Cheesecake" />
+        <h3>🍰 Cheesecake</h3>
+        <p>Rich, creamy, and dreamy with a graham crust 🧀</p>
       </div>
     </div>
   </section>
