--- a/BITELICIOUS/BITELICIOUS/html/index.html
+++ b/BITELICIOUS/BITELICIOUS/html/index.html
@@ -10,17 +10,21 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar">
-    <div class="logo">🌿 BITELICIOUS</div>
-    <ul class="nav-links">
-      <li><a href="#">🏠 Home</a></li>
-      <li><a href="#">🥦 Veg Dishes</a></li>
-      <li><a href="#">🍩 Desserts</a></li>
-      <li><a href="#">📖 About</a></li>
-      <li><a href="#">📞 Contact</a></li>
-      <li><a href="#">💬 Reviews</a></li>
+<nav class="navbar">
+  <div class="navbar-container">
+    <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
+    <!-- Nav Links -->
+    <ul class="nav-links" id="nav-links">
+      <li><a href="#">🏠 HOME</a></li>
+      <li><a href="#">🥦 VEG DISHES</a></li>
+      <li><a href="#">🍩 DESSERTS</a></li>
+      <li><a href="#">📖 ABOUT US</a></li>
+      <li><a href="#">📞 CONTACT</a></li>
+      <li><a href="#">💬 REVIEW</a></li>
     </ul>
-  </nav>
+  </div>
+</nav>
+
 
   <!-- Hero Section -->
   <header class="hero">
