ADDDES ITALIAN DISHES

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -132,6 +132,46 @@
       </div>
     </div>
   </section>
+  <section class="recipes-section">
+    <h2 class="section-title">🍕 Italian Temptations</h2>
+    <div class="recipes">
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?pizza,margherita" alt="Margherita Pizza" />
+        <h3>MARGHERITA PIZZA</h3>
+        <p>Classic, cheesy, and totally iconic 🍅🧀</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?spaghetti,olive-oil" alt="Spaghetti Aglio e Olio" />
+        <h3>SPAGHETTI AGLIO E OLIO</h3>
+        <p>Simple garlic pasta with olive oil and herbs 🌿</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?lasagna,vegetarian" alt="Vegetarian Lasagna" />
+        <h3>VEGGIE LASAGNA</h3>
+        <p>Layered with veggies, sauce & creamy béchamel 😍</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?mushroom,risotto" alt="Mushroom Risotto" />
+        <h3>MUSHROOM RISOTTO</h3>
+        <p>Creamy Arborio rice with earthy mushrooms 🍚</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?bruschetta" alt="Bruschetta" />
+        <h3>BRUSCHETTA</h3>
+        <p>Toasted bread with tomatoes, basil & olive oil 🫒</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?pasta,pesto" alt="Pesto Pasta" />
+        <h3>PESTO PASTA</h3>
+        <p>Fresh basil, garlic & pine nuts blended to perfection 💚</p>
+      </div>
+      <div class="recipe-card">
+        <img src="https://source.unsplash.com/250x150/?gnocchi,italian" alt="Potato Gnocchi" />
+        <h3>GNOCCHI</h3>
+        <p>Soft potato dumplings served with tomato or pesto 🍅</p>
+      </div>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer class="footer">
