--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>🌀 BITELICIOUS | Veg Recipes & Desserts 🍰</title>
   <link rel="stylesheet" href="styles.css" />
+  <script src="script.js"></script>
+
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Open+Sans:wght@400;600&display=swap"
     rel="stylesheet"> <!-- Adding Google Fonts -->
 </head>
