DESSERT SECTION UPDATED

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -91,44 +91,39 @@
     <h2 class="section-title">🎭 Sweet Treats</h2>
     <div class="recipes">
       <div class="recipe-card">
-        <img src="https://source.unsplash.com/250x150/?gulab-jamun" alt="Gulab Jamun" />
-        <h3>🍿 Gulab Jamun</h3>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVys78mi4nMQhBqQHaNIVRjhEN4AHbC6TzCA&s" alt="Gulab Jamun" />
+        <h3>GULAB JAMUN</h3>
         <p>Soft, warm & soaked in sweetness 💕</p>
       </div>
       <div class="recipe-card">
-        <img src="https://source.unsplash.com/250x150/?brownie" alt="Brownie" />
-        <h3>🍫 Choco Brownies</h3>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWWITKzNrOzEqSFrXWL4xzohSYl_Hz9qJxXw&s" alt="Brownie" />
+        <h3>CHOCO BROWNIE</h3>
         <p>Fudgy, gooey, and dreamy 😍</p>
       </div>
       <div class="recipe-card">
-        <img src="https://source.unsplash.com/250x150/?icecream" alt="Ice Cream" />
-        <h3>🍓 Ice Cream Sundae</h3>
-        <p>Chill out with this fruity swirl ❄️🍒</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvXUI1BMuJXypHy1opclhSyCxRAKnTy_RomBtGut6CckKPA2O4HjHfAPVf9e4b4MWOhjk&usqp=CAU" alt="cheescake" />
+        <h3>CHEESCAKE</h3>
+        <p>The sweetness and the salt going perfectly together</p>
       </div>
       <div class="recipe-card">
-        <img src="https://source.unsplash.com/250x150/?cupcake" alt="Cupcake" />
-        <h3>🧁 Vanilla Cupcakes</h3>
-        <p>Fluffy, soft & topped with icing 🧁</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNUPJ2ZLw0QulIEEd8_k7fDbwJqizwFdEkOg&s" alt="chia pudding" />
+        <h3>CHIA PUDDING</h3>
+        <p>milk, chia seeds, sugar to taste, and vanilla</p>
       </div>
       <div class="recipe-card">
-        <img src="https://source.unsplash.com/250x150/?carrot-cake" alt="Carrot Cake" />
-        <h3>🥕 Carrot Cake</h3>
-        <p>Sweet, moist & full of goodness 🥕</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6bGkxH9YZuV7mFUiw6TEdzmhjRUsofd2eRg&s" alt="donuts" />
+        <h3>DONUTS</h3>
+        <p> A sweet circle of happiness in every bite!</p>
       </div>
       <div class="recipe-card">
-        <img src="https://i.pinimg.com/736x/02/86/90/0286901ff92ce926f6265a56c0cd57be.jpg" alt="Chocolate Pudding" />
-        <h3>🍮 Chocolate Pudding</h3>
-        <p>Velvety smooth and indulgent 🍫</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTN6jKQfFJM7T-qTUTsNy6wkenebjdwju9xqg&s" alt="tiramisu" />
+        <h3>TIRAMISu</h3>
+        <p>Layers of coffee-soaked ladyfingers with mascarpone cream</p>
       </div>
       <div class="recipe-card">
-        <img src="https://source.unsplash.com/250x150/?jalebi" alt="Jalebi" />
-        <h3>🍯 Jalebi</h3>
-        <p>Sweet, crispy, and dipped in syrup 🍯</p>
-      </div>
-      <div class="recipe-card">
-        <img src="https://i.pinimg.com/736x/59/ad/7d/59ad7dfa8c1a33019081315e262f20b5.jpg" alt="Cheesecake" />
-        <h3>🍰 Cheesecake</h3>
-        <p>Rich, creamy, and dreamy with a graham crust 🧀</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSaQRl5pSnH524MhjBqDhxHws4NVQVZRQmDg&s" alt="rasmalai" />
+        <h3>RASMALAI</h3>
+        <p>Flattened rasgullas soaked in saffron-milk and topped with nuts</p>
       </div>
     </div>
   </section>
