indiandishes_and_namesofrecipe_corner

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -41,54 +41,49 @@
 
   <!-- Veg Recipes Section -->
   <section class="recipes-section">
-    <h2 class="section-title">🥗 Veggie Delights</h2>
+    <h2 class="section-title">BOLD BITES OF BHARAT</h2>
     <div class="recipes">
       <div class="recipe-card">
         <img src="https://i.pinimg.com/474x/fb/f7/be/fbf7be59247865496a6670d365a6a373.jpg" alt="Paneer" />
-        <h3>🧈 Paneer Butter Masala</h3>
+        <h3>PANEER BUTTER MASALA</h3>
         <p>Rich, creamy & totally comforting 💛</p>
       </div>
       <div class="recipe-card">
         <img src="https://i.pinimg.com/736x/85/92/9d/85929d6ce6ed66862f034601da933f9f.jpg" alt="Veg Biryani" />
-        <h3>🍚 Veggie Biryani</h3>
-        <p>Spicy, colorful & full of flavor 🌶️</p>
+        <h3>VEGGIE BIRYANI</h3>
+        <p>Spicy, colorful & full of flavor</p>
       </div>
       <div class="recipe-card">
         <img src="https://i.pinimg.com/736x/fc/28/11/fc2811c65a94e2504b58dc40d412b811.jpg" alt="Veg Pasta" />
-        <h3>🍝 Cheesy Veg Pasta</h3>
-        <p>Italian vibes with desi twist 😋</p>
+        <h3>CHEESY VEG PASTA</h3>
+        <p>Italian vibes with desi twist</p>
       </div>
       <div class="recipe-card">
-        <img src="https://source.unsplash.com/250x150/?dal,indian" alt="Dal Tadka" />
-        <h3>🍛 Dal Tadka</h3>
-        <p>Comforting and nutritious yellow dal 🌿</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSASWoGdCJ9PrJC53RVX-lkpVivpD_acxLYJQ&s" alt="Dal Tadka" />
+        <h3>DAL TADKA</h3>
+        <p>Comforting and nutritious yellow dal</p>
       </div>
       <div class="recipe-card">
-        <img src="https://source.unsplash.com/250x150/?samosa,veg" alt="Veg Samosa" />
-        <h3>🥟 Veg Samosa</h3>
-        <p>Crunchy, spicy & perfect for snacks 😋</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRf5JxXN3yIx-B6GoyV4163mwyJ-WjxMa7iyQ&s" alt="Veg Samosa" />
+        <h3>SAMOSA</h3>
+        <p>Crunchy, spicy & perfect for snacks </p>
       </div>
       <div class="recipe-card">
-        <img src="https://source.unsplash.com/250x150/?masala,paratha" alt="Aloo Paratha" />
-        <h3>🥔 Aloo Paratha</h3>
-        <p>Soft and stuffed with spicy mashed potatoes 🥔</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTcFoXlpO44TFsgvzcaTuECDcF_wGFVcRocfw&s" alt="Chole Bhature" />
+        <h3>CHOLE BHATURE</h3>
+        <p>Spicy chickpeas served with fried bread</p>
       </div>
       <div class="recipe-card">
-        <img src="https://source.unsplash.com/250x150/?chole,bhature" alt="Chole Bhature" />
-        <h3>🍛 Chole Bhature</h3>
-        <p>Spicy chickpeas served with fried bread 🍞</p>
-      </div>
-      <div class="recipe-card">
-        <img src="https://source.unsplash.com/250x150/?salad" alt="Greek Salad" />
-        <h3>🥗 Greek Salad</h3>
-        <p>Fresh veggies with feta and olives 🥒🍅</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6D3X72woclFb2HV7VWBRaa6izkSyCj7U2Rg&s" alt="Greek Salad" />
+        <h3>RAJMA CHAWAL</h3>
+        <p>Kidney beans curry served with rice</p>
       </div>
     </div>
   </section>
 
   <!-- Dessert Section -->
   <section class="recipes-section">
-    <h2 class="section-title">🎭 Sweet Treats</h2>
+    <h2 class="section-title">DUSTED & DELICIOUS</h2>
     <div class="recipes">
       <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVys78mi4nMQhBqQHaNIVRjhEN4AHbC6TzCA&s" alt="Gulab Jamun" />
@@ -128,7 +123,7 @@
     </div>
   </section>
   <section class="recipes-section">
-    <h2 class="section-title">🍕 Italian Temptations</h2>
+    <h2 class="section-title">SAPORI D’AMORE</h2>
     <div class="recipes">
       <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxDglB44KYOKPMkSu6p4tn4idJcGsUg_YUeA&s" alt="Margherita Pizza" />
