--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -163,6 +163,55 @@
     </div>
   </section>
 
+<!-- Mexican Vegetarian Dishes Section -->
+<section class="recipes-section">
+  <h2 class="section-title">SABOR MEXICANO</h2>
+  <div class="recipes">
+    <!-- Vegetarian Tacos -->
+    <div class="recipe-card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYqx3N54UpRq7G-vg7m8YWr8YmmGfy4W8fog&s" alt="Vegetarian Tacos" />
+      <h3>VEGETARIAN TACOS</h3>
+      <p>Filled with beans, veggies, and cheese, served with fresh salsa and avocado</p>
+    </div>
+    <!-- Vegetarian Enchiladas -->
+    <div class="recipe-card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQHkq_dRbA3aa48XglvIuP_FC1jxjAT7dWYg&s" alt="Vegetarian Enchiladas" />
+      <h3>VEGETARIAN ENCHILADAS</h3>
+      <p>Corn tortillas rolled and stuffed with veggies, topped with green sauce and cheese</p>
+    </div>
+    <!-- Chiles Rellenos -->
+    <div class="recipe-card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3eN60Dj90MBK48uOyVc3K095NpKF4DkMEHw&s" alt="Chiles Rellenos" />
+      <h3>CHILES RELLENOS</h3>
+      <p>Stuffed peppers with cheese or beans, lightly fried and served with tomato sauce</p>
+    </div>
+    <!-- Vegetarian Quesadillas -->
+    <div class="recipe-card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR75pBEcFJJoH2ILasGIHKwA-KzQNHJye0-Uw&s" alt="Vegetarian Quesadillas" />
+      <h3>VEGETARIAN QUESADILLAS</h3>
+      <p>Flour tortillas filled with cheese, mushrooms, and veggies, grilled to perfection</p>
+    </div>
+    <!-- Guacamole -->
+    <div class="recipe-card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtYLZp6FlVB82UdZmVnYN1Ic21GVxAoMaA4g&s" alt="Guacamole" />
+      <h3>GUACAMOLE</h3>
+      <p>A refreshing avocado dip with lime, cilantro, tomatoes, and a dash of salt</p>
+    </div>
+    <!-- Sopes -->
+    <div class="recipe-card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsIlB3kRy7BMnd9zsxlCpKUjDZ5wKUjzWQIA&s" alt="Vegetarian Sopes" />
+      <h3>SOPES</h3>
+      <p>Thick tortillas with beans, lettuce, cheese, and salsa, perfect as a snack or meal</p>
+    </div>
+    <!-- Mexican Street Corn -->
+    <div class="recipe-card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKBjKyW8UBvt7NQTGpQAQK05aSRtlmwoqxAg&s" alt="Mexican Street Corn" />
+      <h3>MEXICAN STREET CORN</h3>
+      <p>Grilled corn on the cob slathered in cheese, chili powder, and a squeeze of lime</p>
+    </div>
+  </div>
+</section>
+
   <!-- Footer -->
   <footer class="footer">
     <p>🧁 Made with 💖 by OUR TEAM | &copy; 2025 BITELICIOUS 🌱</p>
