--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -29,15 +29,15 @@
 </nav>
 
 
-  <!-- Hero Section -->
-  <header class="hero">
-    <h1>✨ Wholesome Veg Recipes & Cute Sweet Treats ✨</h1>
-    <p>Search your cravings and let the magic begin! 🌟</p>
-    <div class="search-bar">
-      <input type="text" placeholder="🔍 Search your dream dish..." />
-      <button>🍽️ Go</button>
-    </div>
-  </header>
+<!-- Hero Section -->
+<header class="hero" style="background: url('https://cdn.pixabay.com/photo/2017/12/01/03/07/christmas-2990038_640.jpg') center/cover no-repeat;
+color: white; text-align: center; padding: 5rem 2rem;">
+   <div class="search-bar" style="display: flex; justify-content: center; gap: 0.5rem; max-width: 500px; margin: 0 auto;">
+    <input type="text" placeholder="Search your dream dish" style="padding: 0.75rem 1rem; border-radius: 8px; border: none; width: 70%;" />
+    <button style="padding: 0.75rem 1.5rem; border-radius: 8px; background-color: #ff8c94; border: none; color: white; cursor: pointer; font-weight: bold;">Go</button>
+  </div>
+</header>
+
 
   <!-- Veg Recipes Section -->
   <section class="recipes-section">
@@ -212,10 +212,17 @@
   </div>
 </section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p>🧁 Made with 💖 by OUR TEAM | &copy; 2025 BITELICIOUS 🌱</p>
-  </footer>
+ <!-- Footer -->
+<footer class="footer">
+  <p>Made with LOVE by <strong>OUR TEAM</strong> | &copy; 2025 <strong>BITELICIOUS</strong></p>
+
+  <!-- Optional Links Section -->
+  <p>
+    <a href="#">Instagram</a> |
+    <a href="#">Facebook</a> |
+    <a href="#">Contact Us</a>
+  </p>
+</footer>
 
 </body>
 
