update header section

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -30,11 +30,10 @@
 
 
 <!-- Hero Section -->
-<header class="hero" style="background: url('https://cdn.pixabay.com/photo/2017/12/01/03/07/christmas-2990038_640.jpg') center/cover no-repeat;
-color: white; text-align: center; padding: 5rem 2rem;">
-   <div class="search-bar" style="display: flex; justify-content: center; gap: 0.5rem; max-width: 500px; margin: 0 auto;">
-    <input type="text" placeholder="Search your dream dish" style="padding: 0.75rem 1rem; border-radius: 8px; border: none; width: 70%;" />
-    <button style="padding: 0.75rem 1.5rem; border-radius: 8px; background-color: #ff8c94; border: none; color: white; cursor: pointer; font-weight: bold;">Go</button>
+<header class="hero">
+  <div class="search-bar">
+    <input type="text" placeholder="Search your dish" />
+    <button>Go</button>
   </div>
 </header>
 
