--- a/review.html
+++ b/review.html
@@ -23,6 +23,16 @@
         <p><strong>– Sanjana D.</strong></p>
         <p>⭐⭐⭐⭐⭐</p>
       </div>
+    <div class="review">
+    <p>“Tried your no-bake cheesecake. OMG. It was heavenly and so easy to make!”</p>
+    <p><strong>– Rhea P.</strong></p>
+    <p>⭐⭐⭐⭐⭐</p>
+  </div>
+<div class="review">
+    <p>“This Dal Tadka recipe is spot on! Reminded me of dhaba-style flavors — smoky, rich, and comforting.”</p>
+    <p><strong>– Meena V.</strong></p>
+    <p>⭐⭐⭐⭐⭐</p>
+  </div>
 
     <div class="review">
       <p>“I baked your almond flour cookies — not only healthy, but ridiculously yummy!”</p>
@@ -33,6 +43,11 @@
     <div class="review">
       <p>“BITELICIOUS makes veg cooking feel magical and easy. Everything tastes like a hug!”</p>
       <p><strong>– Simran L.</strong></p>
+      <p>⭐⭐⭐⭐⭐</p>
+    </div>
+<div class="review">
+      <p>“Had this with my family last night — everyone loved it. I had to double the recipe because it was so popular! Will definitely make again.”</p>
+      <p><strong>– Raghav K.</strong></p>
       <p>⭐⭐⭐⭐⭐</p>
     </div>
 
