Update INDEX.HTML- linked review page

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -23,7 +23,7 @@
       <li><a href="#">🍩 DESSERTS</a></li>
       <li><a href="#">📖 ABOUT US</a></li>
       <li><a href="#">📞 CONTACT</a></li>
-      <li><a href="#">💬 REVIEW</a></li>
+      <li><a href="review.html">💬 REVIEW</a></li>
     </ul>
   </div>
 </nav>
@@ -53,9 +53,9 @@
         <p>Spicy, colorful & full of flavor</p>
       </div>
       <div class="recipe-card">
-        <img src="https://i.pinimg.com/736x/fc/28/11/fc2811c65a94e2504b58dc40d412b811.jpg" alt="Veg Pasta" />
-        <h3>CHEESY VEG PASTA</h3>
-        <p>Italian vibes with desi twist</p>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQiTtSRPHcvjzBfFPkT1joclJAHs5BUtD3nig&s" alt="masala dosa" />
+        <h3>Masala Dosa</h3>
+        <p>Fermented rice & urad dal batter, potato masala, spices</p>
       </div>
       <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSASWoGdCJ9PrJC53RVX-lkpVivpD_acxLYJQ&s" alt="Dal Tadka" />
@@ -111,7 +111,7 @@
       </div>
       <div class="recipe-card">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTN6jKQfFJM7T-qTUTsNy6wkenebjdwju9xqg&s" alt="tiramisu" />
-        <h3>TIRAMISu</h3>
+        <h3>TIRAMISU</h3>
         <p>Layers of coffee-soaked ladyfingers with mascarpone cream</p>
       </div>
       <div class="recipe-card">
