Add images and update header

--- a/dal_tadka.html
+++ b/dal_tadka.html
@@ -7,6 +7,12 @@
 <body>
 
   <h1>Dal Tadka</h1>
+  <section>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6Hq83K8hexV3R1IKS7blIRoIMOjmAktjS3Q&s" alt="Dal Tadka" width="300">
+    <p><strong>Serves:</strong> 2-3 people</p>
+    <p><strong>Preparation Time:</strong> 10 minutes</p>
+    <p><strong>Cooking Time:</strong> 25 minutes</p>
+  </section>
   <h2>Ingredients:</h2>
   <ul>
     <li>1 cup toor dal (pigeon peas)</li>
