--- a/dal_tadka.html
+++ b/dal_tadka.html
@@ -31,5 +31,16 @@
     <li>2 tbsp ghee or oil</li>
     <li>Fresh coriander leaves (chopped)</li>
   </ul>
+  <h2>Instructions:</h2>
+  <ol>
+    <li>Rinse toor dal thoroughly. Pressure cook with water, turmeric, and a pinch of salt for 3-4 whistles until soft.</li>
+    <li>Heat ghee or oil in a pan. Add cumin seeds, mustard seeds, and let them splutter.</li>
+    <li>Add garlic, ginger, red chilies, and hing. Sauté for a few seconds.</li>
+    <li>Add chopped onions and green chilies. Cook until onions turn golden.</li>
+    <li>Add chopped tomatoes and cook until soft.</li>
+    <li>Mix in the cooked dal. Adjust salt and add water for desired consistency.</li>
+    <li>Simmer for a few minutes. Garnish with coriander leaves.</li>
+    <li>Serve hot with steamed rice or roti.</li>
+  </ol>
 </body>
 </html>
