--- a/dal_tadka.html
+++ b/dal_tadka.html
@@ -42,5 +42,19 @@
     <li>Simmer for a few minutes. Garnish with coriander leaves.</li>
     <li>Serve hot with steamed rice or roti.</li>
   </ol>
+   <h2>FAQs:</h2>
+  <section>
+    <p><strong>Q: Can I use moong dal instead of toor dal?</strong><br>
+    A: Yes, moong dal works well too. The flavor will be lighter and milder.</p>
+
+    <p><strong>Q: What if I don't have a pressure cooker?</strong><br>
+    A: You can cook the dal in a regular pot, but it will take longer—around 40–45 minutes.</p>
+
+    <p><strong>Q: Is Dal Tadka vegan?</strong><br>
+    A: Traditionally, ghee is used which is not vegan. You can substitute it with oil for a vegan version.</p>
+
+    <p><strong>Q: How can I store leftovers?</strong><br>
+    A: Store in an airtight container in the fridge for up to 2 days. Reheat before serving.</p>
+  </section>
 </body>
 </html>
