Update image and time

--- a/donuts.html
+++ b/donuts.html
@@ -8,7 +8,13 @@
 
   <h1>Classic Donuts</h1>
 
-
+ <section>
+    <img src="https://media.istockphoto.com/id/686623972/photo/preparing-homemade-donuts.jpg?b=1&s=612x612&w=0&k=20&c=FTlJvPj4UPxBrLXGl4SBdfcvlbk1qesCL2zmwBwYh08=" alt="Donuts" width="300">
+    <p><strong>Serves:</strong> 10–12 donuts</p>
+    <p><strong>Prep Time:</strong> 20 minutes</p>
+    <p><strong>Rest Time:</strong> 1 hour</p>
+    <p><strong>Cooking Time:</strong> 15 minutes</p>
+  </section>
 
   <h2>Ingredients:</h2>
   <ul>
