add instruction for donuts

--- a/donuts.html
+++ b/donuts.html
@@ -30,7 +30,18 @@
     <li>Powdered sugar or glaze (optional)</li>
   </ul>
 
-  
+  <h2>Instructions:</h2>
+  <ol>
+    <li>In a small bowl, dissolve yeast in warm water. Let sit for 5–10 minutes until foamy.</li>
+    <li>In a large bowl, combine milk, sugar, salt, butter, and egg. Add the yeast mixture and stir well.</li>
+    <li>Add flour gradually, mixing until a soft dough forms. Knead for 5–7 minutes until smooth.</li>
+    <li>Cover and let dough rise in a warm place for about 1 hour or until doubled in size.</li>
+    <li>Roll dough out on a floured surface to about 1/2 inch thickness. Cut out donut shapes.</li>
+    <li>Let the shaped donuts rest for another 30 minutes to rise again slightly.</li>
+    <li>Heat oil in a deep pan to 350°F (175°C). Fry donuts 1–2 minutes per side until golden brown.</li>
+    <li>Drain on paper towels and coat with powdered sugar or glaze if desired.</li>
+    <li>Serve warm and enjoy!</li>
+  </ol>
   
 </body>
 </html>
