--- a/donuts.html
+++ b/donuts.html
@@ -42,6 +42,16 @@
     <li>Drain on paper towels and coat with powdered sugar or glaze if desired.</li>
     <li>Serve warm and enjoy!</li>
   </ol>
-  
+  <h2>FAQs:</h2>
+  <section>
+    <p><strong>Q: Can I bake the donuts instead of frying?</strong><br>
+    A: Yes! Bake at 375°F (190°C) for about 10–12 minutes, but they’ll be less crispy.</p>
+
+    <p><strong>Q: How do I store leftover donuts?</strong><br>
+    A: Store in an airtight container at room temperature for 1–2 days. Reheat in the microwave for a few seconds before eating.</p>
+
+    <p><strong>Q: Can I freeze the dough?</strong><br>
+    A: Yes! Shape and freeze the dough before the second rise. Thaw and rise before frying.</p>
+  </section>
 </body>
 </html>
