add footer and navbar in donuts recipe

--- a/donuts.html
+++ b/donuts.html
@@ -6,8 +6,23 @@
 </head>
 <body>
 
-  <h1>Classic Donuts</h1>
-
+  <h1>DONUTS</h1>
+  <h3>“Timeless Taste: The Perfect Classic Donuts Recipe”</h3>
+  
+<nav class="navbar">
+  <div class="navbar-container">
+    <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
+    <!-- Nav Links -->
+    <ul class="nav-links" id="nav-links">
+      <li><a href="INDEX.html">🏠 HOME</a></li>
+      <li><a href="#">🥦 VEG DISHES</a></li>
+      <li><a href="#">🍩 DESSERTS</a></li>
+      <li><a href="#">📖 ABOUT US</a></li>
+      <li><a href="#">📞 CONTACT</a></li>
+      <li><a href="review.html">💬 REVIEW</a></li>
+    </ul>
+  </div>
+</nav>
  <section>
     <img src="https://media.istockphoto.com/id/686623972/photo/preparing-homemade-donuts.jpg?b=1&s=612x612&w=0&k=20&c=FTlJvPj4UPxBrLXGl4SBdfcvlbk1qesCL2zmwBwYh08=" alt="Donuts" width="300">
     <p><strong>Serves:</strong> 10–12 donuts</p>
@@ -53,5 +68,13 @@
     <p><strong>Q: Can I freeze the dough?</strong><br>
     A: Yes! Shape and freeze the dough before the second rise. Thaw and rise before frying.</p>
   </section>
+  <footer class="footer">
+  <p>Made with LOVE by <strong>OUR TEAM</strong> | &copy; 2025 <strong>BITELICIOUS</strong></p>
+  <p>
+    <a href="#">Instagram</a> 
+    <a href="#">Facebook</a> 
+    <a href="#">Contact Us</a>
+  </p>
+</footer>
 </body>
 </html>
