add navbar and footer for dal_tadka

--- a/dal_tadka.html
+++ b/dal_tadka.html
@@ -7,11 +7,26 @@
 <body>
 
   <h1>Dal Tadka</h1>
+  <h3>“Simple Ingredients. Explosive Flavor. That’s Dal Tadka.”</h3>
   <section>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6Hq83K8hexV3R1IKS7blIRoIMOjmAktjS3Q&s" alt="Dal Tadka" width="300">
     <p><strong>Serves:</strong> 2-3 people</p>
     <p><strong>Preparation Time:</strong> 10 minutes</p>
     <p><strong>Cooking Time:</strong> 25 minutes</p>
+    <nav class="navbar">
+  <div class="navbar-container">
+    <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
+    <!-- Nav Links -->
+    <ul class="nav-links" id="nav-links">
+      <li><a href="INDEX.html">🏠 HOME</a></li>
+      <li><a href="#">🥦 VEG DISHES</a></li>
+      <li><a href="#">🍩 DESSERTS</a></li>
+      <li><a href="#">📖 ABOUT US</a></li>
+      <li><a href="#">📞 CONTACT</a></li>
+      <li><a href="review.html">💬 REVIEW</a></li>
+    </ul>
+  </div>
+</nav>
   </section>
   <h2>Ingredients:</h2>
   <ul>
@@ -56,5 +71,15 @@
     <p><strong>Q: How can I store leftovers?</strong><br>
     A: Store in an airtight container in the fridge for up to 2 days. Reheat before serving.</p>
   </section>
+  <footer class="footer">
+  <p>Made with LOVE by <strong>OUR TEAM</strong> | &copy; 2025 <strong>BITELICIOUS</strong></p>
+
+  <!-- Optional Links Section -->
+  <p>
+    <a href="#">Instagram</a> |
+    <a href="#">Facebook</a> |
+    <a href="#">Contact Us</a>
+  </p>
+</footer>
 </body>
 </html>
