--- a/contactus.html
+++ b/contactus.html
@@ -11,6 +11,27 @@
   <div class="container">
     <h1>Contact Us</h1>
     <p>If you have any questions or suggestions, feel free to get in touch with us!</p>
+<div class="container">
+    <h1>Contact Us</h1>
+    <p>If you have any questions or suggestions, feel free to get in touch with us!</p>
 
+    <form action="mailto:your-email@example.com" method="post" enctype="text/plain" onsubmit="showPopup(); return false;">
+      <table>
+        <tr>
+          <td><label for="name">Name:</label></td>
+          <td><input type="text" id="name" name="name" required></td>
+        </tr>
+        <tr>
+          <td><label for="email">Email:</label></td>
+          <td><input type="email" id="email" name="email" required></td>
+        </tr>
+        <tr>
+          <td><label for="message">Message:</label></td>
+          <td><textarea id="message" name="message" rows="6" required></textarea></td>
+        </tr>
+      </table>
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
 </body>
 </html>
