add popup and footer

--- a/contactus.html
+++ b/contactus.html
@@ -33,5 +33,17 @@
       <button type="submit">Send Message</button>
     </form>
   </div>
+    <!-- Popup -->
+  <div class="popup" id="popup">
+    <div class="popup-content">
+      <h2>Thank You!</h2>
+      <p>Your message has been sent successfully.</p>
+      <button onclick="closePopup()">Close</button>
+    </div>
+  </div>
+
+  <footer>
+    <p>&copy; 2025 Recipe Finder App. All rights reserved.</p>
+  </footer>
 </body>
 </html>
