Update navbar and header section

--- a/donuts.html
+++ b/donuts.html
@@ -5,32 +5,46 @@
   <title>Donut Recipe</title>
 </head>
 <body>
+<!-- Navbar -->
 
-  <h1>DONUTS</h1>
-  <h3>“Timeless Taste: The Perfect Classic Donuts Recipe”</h3>
-  
-<nav class="navbar">
-  <div class="navbar-container">
-    <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
-    <!-- Nav Links -->
-    <ul class="nav-links" id="nav-links">
-      <li><a href="INDEX.html">🏠 HOME</a></li>
-      <li><a href="#">🥦 VEG DISHES</a></li>
-      <li><a href="#">🍩 DESSERTS</a></li>
-      <li><a href="#">📖 ABOUT US</a></li>
-      <li><a href="#">📞 CONTACT</a></li>
-      <li><a href="review.html">💬 REVIEW</a></li>
-    </ul>
-  </div>
-</nav>
- <section>
-    <img src="https://media.istockphoto.com/id/686623972/photo/preparing-homemade-donuts.jpg?b=1&s=612x612&w=0&k=20&c=FTlJvPj4UPxBrLXGl4SBdfcvlbk1qesCL2zmwBwYh08=" alt="Donuts" width="300">
-    <p><strong>Serves:</strong> 10–12 donuts</p>
-    <p><strong>Prep Time:</strong> 20 minutes</p>
-    <p><strong>Rest Time:</strong> 1 hour</p>
-    <p><strong>Cooking Time:</strong> 15 minutes</p>
-  </section>
+  <nav class="navbar">
 
+    <div class="navbar-container">
+
+      <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
+
+      <ul class="nav-links">
+
+        <li><a href="INDEX.HTML">🏠 HOME</a></li>
+
+        <li><a href="#">🥦 VEG DISHES</a></li>
+
+        <li><a href="#">🍩 DESSERTS</a></li>
+
+        <li><a href="#">📖 ABOUT US</a></li>
+
+        <li><a href="contactus.html">📞 CONTACT</a></li>
+
+        <li><a href="review.html">💬 REVIEW</a></li>
+
+      </ul>
+
+    </div>
+
+  </nav>
+   <header class="hero">
+    <div class="hero-content">
+      <h1>DONUTS</h1>
+      <h3>“Timeless Taste: The Perfect Classic Donuts Recipe”</h3>
+    </div>
+  </header>
+  <section>
+  <img src="https://media.istockphoto.com/id/686623972/photo/preparing-homemade-donuts.jpg?b=1&s=612x612&w=0&k=20&c=FTlJvPj4UPxBrLXGl4SBdfcvlbk1qesCL2zmwBwYh08=" alt="Donuts" width="300">
+  <p><i class="fas fa-users"></i> <strong>Serves:</strong> 10–12 donuts</p>
+  <p><i class="fas fa-clock"></i> <strong>Prep Time:</strong> 20 minutes</p>
+  <p><i class="fas fa-hourglass-half"></i> <strong>Rest Time:</strong> 1 hour</p>
+  <p><i class="fas fa-fire"></i> <strong>Cooking Time:</strong> 15 minutes</p>
+</section>
   <h2>Ingredients:</h2>
   <ul>
     <li>2 1/4 tsp (1 packet) active dry yeast</li>
