navbar and header section update

--- a/dal_tadka.html
+++ b/dal_tadka.html
@@ -5,15 +5,7 @@
   <title>Dal Tadka Recipe</title>
 </head>
 <body>
-
-  <h1>Dal Tadka</h1>
-  <h3>“Simple Ingredients. Explosive Flavor. That’s Dal Tadka.”</h3>
-  <section>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6Hq83K8hexV3R1IKS7blIRoIMOjmAktjS3Q&s" alt="Dal Tadka" width="300">
-    <p><strong>Serves:</strong> 2-3 people</p>
-    <p><strong>Preparation Time:</strong> 10 minutes</p>
-    <p><strong>Cooking Time:</strong> 25 minutes</p>
-    <nav class="navbar">
+<nav class="navbar">
   <div class="navbar-container">
     <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
     <!-- Nav Links -->
@@ -22,11 +14,19 @@
       <li><a href="#">🥦 VEG DISHES</a></li>
       <li><a href="#">🍩 DESSERTS</a></li>
       <li><a href="#">📖 ABOUT US</a></li>
-      <li><a href="#">📞 CONTACT</a></li>
+      <li><a href="contactus.html">📞 CONTACT</a></li>
       <li><a href="review.html">💬 REVIEW</a></li>
     </ul>
   </div>
 </nav>
+  <h1>Dal Tadka</h1>
+  <h3>“Simple Ingredients. Explosive Flavor. That’s Dal Tadka.”</h3>
+  <section>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6Hq83K8hexV3R1IKS7blIRoIMOjmAktjS3Q&s" alt="Donuts" width="300">
+    <p><i class="fas fa-users"></i> <strong>Serves:</strong> 2-3 people</p>
+    <p><i class="fas fa-clock"></i> <strong>Prep Time:</strong> 20 minutes</p>
+    <p><i class="fas fa-hourglass-half"></i> <strong>Rest Time:</strong> 1 hour</p>
+    <p><i class="fas fa-fire"></i> <strong>Cooking Time:</strong> 25 minutes</p>
   </section>
   <h2>Ingredients:</h2>
   <ul>
