Upload new updated code

--- a/donuts.html
+++ b/donuts.html
@@ -3,48 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <title>Donut Recipe</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="donut.css">
 </head>
 <body>
-<!-- Navbar -->
 
+  <!-- Navbar -->
   <nav class="navbar">
-
     <div class="navbar-container">
-
       <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
-
       <ul class="nav-links">
-
-        <li><a href="INDEX.HTML">🏠 HOME</a></li>
-
+        <li><a href="#">🏠 HOME</a></li>
         <li><a href="#">🥦 VEG DISHES</a></li>
-
         <li><a href="#">🍩 DESSERTS</a></li>
-
         <li><a href="#">📖 ABOUT US</a></li>
-
-        <li><a href="contactus.html">📞 CONTACT</a></li>
-
-        <li><a href="review.html">💬 REVIEW</a></li>
-
+        <li><a href="#">📞 CONTACT</a></li>
+        <li><a href="#">💬 REVIEW</a></li>
       </ul>
-
     </div>
-
   </nav>
-   <header class="hero">
+
+  <!-- Hero Section with Background Donut -->
+  <header class="hero">
     <div class="hero-content">
       <h1>DONUTS</h1>
       <h3>“Timeless Taste: The Perfect Classic Donuts Recipe”</h3>
     </div>
   </header>
-  <section>
-  <img src="https://media.istockphoto.com/id/686623972/photo/preparing-homemade-donuts.jpg?b=1&s=612x612&w=0&k=20&c=FTlJvPj4UPxBrLXGl4SBdfcvlbk1qesCL2zmwBwYh08=" alt="Donuts" width="300">
-  <p><i class="fas fa-users"></i> <strong>Serves:</strong> 10–12 donuts</p>
-  <p><i class="fas fa-clock"></i> <strong>Prep Time:</strong> 20 minutes</p>
-  <p><i class="fas fa-hourglass-half"></i> <strong>Rest Time:</strong> 1 hour</p>
-  <p><i class="fas fa-fire"></i> <strong>Cooking Time:</strong> 15 minutes</p>
-</section>
+
+  <!-- Recipe Details -->
+  <section class="recipe-info">
+    <p><i class="fas fa-users"></i> <strong>Serves:</strong> 10–12 donuts</p>
+    <p><i class="fas fa-clock"></i> <strong>Prep Time:</strong> 20 minutes</p>
+    <p><i class="fas fa-hourglass-half"></i> <strong>Rest Time:</strong> 1 hour</p>
+    <p><i class="fas fa-fire"></i> <strong>Cooking Time:</strong> 15 minutes</p>
+  </section>
+
   <h2>Ingredients:</h2>
   <ul>
     <li>2 1/4 tsp (1 packet) active dry yeast</li>
@@ -61,34 +55,37 @@
 
   <h2>Instructions:</h2>
   <ol>
-    <li>In a small bowl, dissolve yeast in warm water. Let sit for 5–10 minutes until foamy.</li>
-    <li>In a large bowl, combine milk, sugar, salt, butter, and egg. Add the yeast mixture and stir well.</li>
-    <li>Add flour gradually, mixing until a soft dough forms. Knead for 5–7 minutes until smooth.</li>
-    <li>Cover and let dough rise in a warm place for about 1 hour or until doubled in size.</li>
-    <li>Roll dough out on a floured surface to about 1/2 inch thickness. Cut out donut shapes.</li>
-    <li>Let the shaped donuts rest for another 30 minutes to rise again slightly.</li>
-    <li>Heat oil in a deep pan to 350°F (175°C). Fry donuts 1–2 minutes per side until golden brown.</li>
-    <li>Drain on paper towels and coat with powdered sugar or glaze if desired.</li>
+    <li>Dissolve yeast in warm water. Let sit 5–10 minutes until foamy.</li>
+    <li>Mix milk, sugar, salt, butter, and egg. Add yeast mixture.</li>
+    <li>Add flour gradually to form dough. Knead 5–7 minutes.</li>
+    <li>Cover and rise for 1 hour until doubled.</li>
+    <li>Roll out dough, cut donuts, and let rise 30 more minutes.</li>
+    <li>Fry at 350°F (175°C) for 1–2 mins per side.</li>
+    <li>Drain and coat with sugar or glaze.</li>
     <li>Serve warm and enjoy!</li>
   </ol>
-  <h2>FAQs:</h2>
+
+  <h2>Reviews:</h2>
   <section>
+    <article>
+      <p><strong>⭐⭐⭐⭐⭐ – Riya</strong><br>"Super soft and fluffy! My family loved them."</p>
+    </article>
+    <article>
+      <p><strong>⭐⭐⭐⭐ – Akash</strong><br>"Tastes just like bakery donuts. Will make again!"</p>
+    </article>
+  </section>
+
+  <h2>FAQs:</h2>
+  <section class="faq-box">
     <p><strong>Q: Can I bake the donuts instead of frying?</strong><br>
-    A: Yes! Bake at 375°F (190°C) for about 10–12 minutes, but they’ll be less crispy.</p>
+    A: Yes! Bake at 375°F (190°C) for 10–12 minutes.</p>
 
     <p><strong>Q: How do I store leftover donuts?</strong><br>
-    A: Store in an airtight container at room temperature for 1–2 days. Reheat in the microwave for a few seconds before eating.</p>
+    A: Airtight container for 1–2 days. Reheat before eating.</p>
 
     <p><strong>Q: Can I freeze the dough?</strong><br>
-    A: Yes! Shape and freeze the dough before the second rise. Thaw and rise before frying.</p>
+    A: Yes! Freeze after shaping. Thaw and rise before frying.</p>
   </section>
-  <footer class="footer">
-  <p>Made with LOVE by <strong>OUR TEAM</strong> | &copy; 2025 <strong>BITELICIOUS</strong></p>
-  <p>
-    <a href="#">Instagram</a> 
-    <a href="#">Facebook</a> 
-    <a href="#">Contact Us</a>
-  </p>
-</footer>
+
 </body>
 </html>
