--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <div class="logo" aria-label="Bitelicious logo">🌿 <strong>BITELICIOUS</strong></div>
     <!-- Nav Links -->
     <ul class="nav-links" id="nav-links">
-      <li><a href="#">🏠 HOME</a></li>
+      <li><a href="index.html">🏠 HOME</a></li>
       <li><a href="#">🥦 VEG DISHES</a></li>
       <li><a href="#">🍩 DESSERTS</a></li>
       <li><a href="#">📖 ABOUT US</a></li>
-      <li><a href="#">📞 CONTACT</a></li>
+      <li><a href="contactus.html">📞 CONTACT</a></li>
       <li><a href="review.html">💬 REVIEW</a></li>
     </ul>
   </div>
