--- a/contactus.html
+++ b/contactus.html
@@ -45,5 +45,16 @@
   <footer>
     <p>&copy; 2025 Recipe Finder App. All rights reserved.</p>
   </footer>
+    <script>
+    // Show Popup
+    function showPopup() {
+      document.getElementById('popup').style.display = 'flex';
+    }
+
+    // Close Popup
+    function closePopup() {
+      document.getElementById('popup').style.display = 'none';
+    }
+  </script>
 </body>
 </html>
